# ai-trading-system

./: .env  .env.example  .gitignore  CLIENT_STANDARDIZATION_SUMMARY.md  COMPILE_FIX_REPORT.md  E2E_TEST_FINAL_REPORT.md  E2E_TEST_STATUS.md  GO_PAPER_FREEZE_REPORT.md  MT5_HTTP_FINAL_REPORT.md  PHASE2_FINAL_REPORT.md  README.md  SIGNAL_DISPATCH_HOTFIX_REPORT.md  api-image-id.freeze  docker-compose.freeze.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build_release_candidate.yml  deploy_live.yml  deploy_staging.yml  integration.yml  lint_and_test.yml  verify-stage2.yml
artifacts/: shadow_calibration_2026-04-16.csv  shadow_metrics_2026-04-16.csv  shadow_phaseb_2026-04-17.csv  shadow_phaseb_heartbeat_test_2026-04-17.csv  shadow_phaseb_hourly_2026-04-16.csv  shadow_phaseb_hourly_2026-04-17.csv  shadow_phaseb_pre_fix_2026-04-16.csv
clients/mt5_ea/: DEMO_TEST_PLAN.md  GoldAITraderEA.mq5  GoldAITraderEA_COMPILEFIX_v1.mq5  README.md
docs/: CLIENT_EA_STANDARDIZATION.md  COMMERCIAL_V11_IMPLEMENTATION_REPORT.md  COMMERCIAL_V11_SUMMARY.md  PRODUCTIONROLLOUT_V1_FINAL_SUMMARY.md  api_422_troubleshooting.md
docs/ai/: invocation_policy.md
docs/api/: ai_invocation.md  ea_command_contract_v1.md  endpoints.md
docs/architecture/: overview.md  stage2_intelligence.md
docs/deployment/: stage2_rollout_and_rollback.md  vps_ubuntu_22.md
docs/events/: event_handling_stage2.md
docs/release/: branches.md  (+1 more)
scripts/: 02-config-mt5-login.sh  03-mt5-health-probe.sh  fix-mt5linux-start.sh  inject_test_signal.py  send_directed_test_signal.py
(+122 files in other folders)
